; ModuleID = '/home/carl/AnghaBench/openpilot/selfdrive/common/extr_visionbuf_ion.c_visionbuf_free.c'
source_filename = "/home/carl/AnghaBench/openpilot/selfdrive/common/extr_visionbuf_ion.c_visionbuf_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.ion_handle_data = type { i32 }

@ion_fd = common dso_local global i32 0, align 4
@ION_IOC_FREE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @visionbuf_free(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.ion_handle_data, align 4
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.ion_handle_data, %struct.ion_handle_data* %3, i32 0, i32 0
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* @ion_fd, align 4
  %10 = load i32, i32* @ION_IOC_FREE, align 4
  %11 = call i32 @ioctl(i32 %9, i32 %10, %struct.ion_handle_data* %3)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp eq i32 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  ret void
}

declare dso_local i32 @ioctl(i32, i32, %struct.ion_handle_data*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
